# Salt-your-Credential-Hash

./: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/lab1/: app.py  database.db  schema.sql
tests/: test_credentials.py
