[metadata]
name = Salt your Credential Hash
description = Tests for API in src/lab1/ directory
author = Tristyn Kahrs
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    lab1
install_requires = 
    flask
    sqlite3
    passlib
    secrets
    re
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
package_name = py.typed

[flake8]
max-line-length = 160